--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <title>Page Title</title>
+<!-- Best Practices > User Experience -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
