--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <title>Page Title</title>
 <!-- Best Practices > User Experience -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="title" content="Boost Your Website's Speed: PageSpeed Insights Tips">
+<meta name="description" content="Perfect 100% PageSpeed Score Achieved! 
+optimization result lightning-fast load times br referencing PageSpeed Insights and DevTools Lighthouse proven practices.">
+
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>meta T&D</h1>
 
 </body>
 </html>
