--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ optimization result lightning-fast load times br referencing PageSpeed Insights 
 </head>
 <body>
 <h1>meta T&D</h1>
-  <a>anchor</a>
-
+  <a href nofollow>nofollow</a>
+  <a href sponsored>If you were paid in some way for the link, qualify these links with <code>sponsored</code></a>
+  <a href ugc>If users can insert links on your site (for example, you have a forum section or Q&A site), add  <code>ugc</code></a>
 </body>
 </html>
