--- a/PageSpeedInsight100ScoreTemplate.html
+++ b/PageSpeedInsight100ScoreTemplate.html
@@ -10,6 +10,9 @@ optimization result lightning-fast load times br referencing PageSpeed Insights 
 
 </head>
 <body>
-  <h1>100%</h1>
+  
+  <a href nofollow>nofollow</a>
+  <a href sponsored>If you were paid in some way for the link, qualify these links with <code>sponsored</code></a>
+  <a href ugc>If users can insert links on your site (for example, you have a forum section or Q&A site), add  <code>ugc</code></a>
 </body>
 </html>
