--- a/PageSpeedInsight100ScoreTemplate.html
+++ b/PageSpeedInsight100ScoreTemplate.html
@@ -7,7 +7,9 @@
 <meta property="title" content="Boost Your Website's Speed: PageSpeed Insights Tips">
 <meta name="description" content="Perfect 100% PageSpeed Score Achieved! 
 optimization result lightning-fast load times br referencing PageSpeed Insights and DevTools Lighthouse proven practices.">
-
+<style>
+  a{min-height: 24px;}
+</style>
 </head>
 <body>
   
