--- a/PageSpeedInsight100ScoreTemplate.html
+++ b/PageSpeedInsight100ScoreTemplate.html
@@ -8,7 +8,7 @@
 <meta name="description" content="Perfect 100% PageSpeed Score Achieved! 
 optimization result lightning-fast load times br referencing PageSpeed Insights and DevTools Lighthouse proven practices.">
 <style>
-  a{min-height: 24px;}
+  a{padding: 4px 0;}
 </style>
 </head>
 <body>
