--- a/PageSpeedInsight100ScoreTemplate.html
+++ b/PageSpeedInsight100ScoreTemplate.html
@@ -8,12 +8,13 @@
 <meta name="description" content="Perfect 100% PageSpeed Score Achieved! 
 optimization result lightning-fast load times br referencing PageSpeed Insights and DevTools Lighthouse proven practices.">
 <style>
-  a{padding: 4px 0;}
+  @media (max-width:1200px) {
+  a{font-size:24px;}}
 </style>
 </head>
 <body>
   
-  <a href nofollow>padding nofollow</a>
+  <a href nofollow>nofollow</a>
   <a href sponsored>If you were paid in some way for the link, qualify these links with <code>sponsored</code></a>
   <a href ugc>If users can insert links on your site (for example, you have a forum section or Q&A site), add  <code>ugc</code></a>
 </body>
